--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^16.0.0",
     "@rollup/plugin-node-resolve": "^10.0.0",
+    "pug": "^3.0.0",
+    "pug2svelte": "0.0.2-alpha.9",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
