--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
     "nollup": "^0.13.13",
+    "pug": "^3.0.0",
+    "pug2svelte": "0.0.2-alpha.9",
     "rollup": "^2.3.4",
     "rollup-plugin-hot": "^0.1.0",
     "rollup-plugin-livereload": "^2.0.0",
