--- a/package.json
+++ b/package.json
@@ -2,19 +2,22 @@
   "name": "hyperhodl",
   "version": "1.0.0",
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.1",
     "eslint": "^7.16.0",
     "eslint-plugin-svelte3": "^3.0.0",
     "nollup": "^0.14.3",
     "pug": "^3.0.0",
-    "pug2svelte": "0.0.2-alpha.9",
     "rollup": "^2.35.1",
     "rollup-plugin-hot": "^0.1.1",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte-hot": "^0.13.0",
     "rollup-plugin-terser": "^7.0.2",
-    "svelte": "^3.31.0"
+    "sass": "^1.30.0",
+    "svelte": "^3.31.0",
+    "svelte-preprocess": "^4.6.1"
   },
   "dependencies": {
     "sirv-cli": "^1.0.10"
